# create-mern-app

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  app-stop.sh  config.sh  generate-readme.js  library-stop.sh  library-upgrade.sh  package-lock.json  package.json  publish.sh  upgrade.sh
.github/: FUNDING.yml
.github/workflows/: codeql.yml  eslint.yml
developer/: basic-programming-exercise.html  database-queries-exercise.html  developer-skills.html  full-stack-mern-development.html  index.html  learning-progress.html  speech-to-text.html
developer/css/: bootstrap.min.css.map
developer/scripts/: BigPicture.min.js  main.js  masonry.pkgd.min.js  purecounter.min.js
docs/: 404.html  AI_WORKFLOW.md  ARCHITECTURE.md  CNAME  README.md  STANDARDS.md  architect-skills.html  code-snippets.html  community.html  deployment.html  electronjs.html  expressjs.html  index-v1.html  index.html  installation.html  introduction.html  javascript-snippets.html  javascript.html  live-demo.html  mern-roadmap.html  mongdb.html  mongobd.html  mongodb.html  mysql.html  nextjs-snippets.html  nextjs.html  nodejs-snippets.html  nodejs.html  others.html  privacy-policy.html  reactjs-snippets.html  reactjs.html  reactnative-snippets.html  reactnative.html  reduxjs.html  sample-apps.html  showcase.html  sitemap.xml  snippets.html  support.html  (+2 more)
docs/api/: auth-service.html  create-mernjs-app.html  index.html  node-google-sheet.html  react-svg-icons-loader.html  xml-to-json-chunk-processor.html  xml-to-mongodb-importer.html
docs/blog/: .gitignore  package.json
docs/code-snippets/: electronjs.html  javascript.html  nextjs.html  (+3 more)
scripts/: library-stop.sh
templates/roadmap/aiml/learning/06-packages-development/fastapi-simple-ratelimit/: README.md  pyproject.toml  test_app.py
templates/roadmap/aiml/learning/06-packages-development/fastapi-simple-ratelimit/fastapi_simple_ratelimit/: __init__.py  limiter.py  storage.py
templates/roadmap/aiml/learning/06-packages-development/mini-python-calculator/: .gitignore  README.md  calculator.py  pyproject.toml  requirements.txt
templates/snippets/fastapi-learning/books-crud-fastapi/: Procfile  pyproject.toml
(+2007 files in other folders)
